--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Joe" >
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>{{title|title|safe}} - Law.Technology</title>
+    <title>{% block title %}{% endblock title %}</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -50,9 +50,8 @@
 <!-- this is the content -->
 
 
-
-
-{{content|safe}}
+{% block content %}
+{% endblock content %}
 
 
 
