--- a/templates/blog.html
+++ b/templates/blog.html
@@ -25,7 +25,9 @@ LawTech Blog
     <div class="tab-content" id="nav-tabContent">
     {% for blog_post in blog_posts %}
       <div class="tab-pane fade show active" id="list-{{ blog_post.hook }}" role="tabpanel" aria-labelledby="list-{{ blog_post.hook }}-list">
-      	<p>{{ blog_post.content }}</p>
+			<h1>{{ blog_post.title }}</h1>
+	      <p>{{ blog_post.date }}</p>      	
+      	<p>{{ blog_post.intro }}</p>
 			  	
       </div>
 	{% endfor %}
