--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@ Law.Technology
      		<div class="row">
      		
      			<div class="col-12 text-center">
-     				<a class="btn my_button" href="blog" role="button">All posts</a>
+     				<a class="btn my_blog_button" href="blog" role="button">All posts</a>
      			</div>
      		
 
