--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,8 +12,9 @@ Contact
 				<p class="intro">I am available a number of different ways:</p>
 				<a class="btn my_button" href="mailto:joe@law.technology" role="button">Email</a>
 				<a class="btn my_button" href="https://github.com/kroefeet" target="_blank" role="button">GitHub</a>
-				<p>You could also send me an email directly using this form.</p>
-				<form action="" method="POST">
+				<br>				
+				<p>You could also send me an email directly using this form:</p>
+				<form action="/send-email" method="POST">
 					{% csrf_token %}
 					<input name="name" placeholder="Name" />
 					<input name="email" type="email" placeholder="Email" />
