--- a/templates/send_email.html
+++ b/templates/send_email.html
@@ -12,8 +12,8 @@ Email Me
 				<p class="intro">Send me an email</p>
 				
 				<form action="." method="POST">
-					<input name="name" placeholder="Name" />
-					<input name="email" type="email" placeholder="Email" />
+					<input name="username" placeholder="Name" />
+					<input name="useremail" type="email" placeholder="Email" />
 					<textarea name="message">
 					</textarea>
 					<button type="submit">Submit</button>
