--- a/templates/contact.html
+++ b/templates/contact.html
@@ -14,7 +14,7 @@ Contact
 				<a class="btn my_button" href="https://github.com/kroefeet" target="_blank" role="button">GitHub</a>
 				<br>				
 				<p>You could also send me an email directly using this form:</p>
-				<a class="btn my_button" href="send-email" target="_blank" role="button">I like forms</a>	
+				<a class="btn my_button" href="send-email" role="button">I like forms</a>	
     		</div>
     		<div class="col-md-6 text-center">
 			   <img src="static/profile.jpg" class="img-fluid" alt="placeholder for professional picture"> 		
