still attempting mailgun

--- a/templates/send_email.html
+++ b/templates/send_email.html
@@ -19,6 +19,7 @@ Email Me
 					<button type="submit">Submit</button>
 				</form>				
 				
+				{{ data }}
     		</div>
     		
     		<div class="col-md-6 text-center">
