--- a/templates/contact.html
+++ b/templates/contact.html
@@ -14,7 +14,7 @@ Contact
 				<a class="btn my_button" href="https://github.com/kroefeet" target="_blank" role="button">GitHub</a>
 				<br>
 				<p>You could also send me an email directly using this form:</p>
-        <form action="." method="POST">
+        <form action="contact" method="POST">
             {% csrf_token %}
             {{ form.as_p }}
             <button>Send</button>
