--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,6 +12,8 @@ Contact
 				<p class="intro">I am available a number of different ways:</p>
 				<a class="btn my_button" href="mailto:joe@law.technology" role="button">Email</a>
 				<a class="btn my_button" href="https://github.com/kroefeet" target="_blank" role="button">GitHub</a>
+        <a class="btn my_button" href="github-api" role="button">When you can't get Mailgun to work</a>
+
 				<br>
 				<p>You could also send me an email directly using this form:</p>
         <form action="contact" method="POST">
